Coreção de bug do swagger
